--- a/words-examples.htm
+++ b/words-examples.htm
@@ -1848,8 +1848,32 @@ Meine Schule hat viele freundliche Lehrer.
 أذهب كل صباح إلى المدرسة.  
 مدرستي بها العديد من المعلمين الودودين.
 </div>
+
+<div style="margin: 40px 0; text-align: center;">
+<a href="index.html" class="back-button">🔙 العودة إلى القائمة الرئيسية</a>
+</div>
+<style>
+.back-button {
+ display: inline-block;
+ padding: 15px 30px;
+ background: linear-gradient(45deg, #0077cc, #00aaff);
+ color: #fff;
+ text-decoration: none;
+ font-size: 20px;
+ font-weight: bold;
+ border-radius: 10px;
+ box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+ transition: all 0.3s ease;
+}
+.back-button:hover {
+ transform: translateY(-3px) scale(1.05);
+ box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+ background: linear-gradient(45deg, #00aaff, #0077cc);
+}
+</style>
 </div>
 <!-- يمكنك إضافة المزيد بنفس الطريقة -->
 </body>
 
 </html>
+
