--- a/a1_emails.html
+++ b/a1_emails.html
@@ -1218,8 +1218,30 @@ Ali Mustafa
 علي مصطفى
 </div>
 </div>
+<!-- زر رجوع احترافي -->
+<div style="margin: 40px 0; text-align: center;">
+<a href="index.html" class="back-button">🔙 العودة إلى القائمة الرئيسية</a>
 </div>
-<a href="index.html">🔙 رجوع للصفحة الرئيسية</a>
+<style>
+.back-button {
+ display: inline-block;
+ padding: 15px 30px;
+ background: linear-gradient(45deg, #0077cc, #00aaff);
+ color: #fff;
+ text-decoration: none;
+ font-size: 20px;
+ font-weight: bold;
+ border-radius: 10px;
+ box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+ transition: all 0.3s ease;
+}
+.back-button:hover {
+ transform: translateY(-3px) scale(1.05);
+ box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+ background: linear-gradient(45deg, #00aaff, #0077cc);
+}
+</style>
+</div>
 <!-- إذا أعجبك التصميم والاسلوب أكمل لك من 11 حتى 20 -->
 </body>
 </html>
