--- a/words.html
+++ b/words.html
@@ -482,15 +482,34 @@ a:hover {
 <tr><td>Bis bald</td><td>أراك قريبًا</td></tr>
 </tbody>
 </table>
-</body>
-</html>
 <p style="text-align:center;">
-</p>
+
 </body>
 </html>
 </table>
-<p style="text-align:center;">
-<a href="index.html">🔙 رجوع للصفحة الرئيسية</a>
+<!-- زر رجوع احترافي -->
+<div style="margin: 40px 0; text-align: center;">
+<a href="index.html" class="back-button">🔙 العودة إلى القائمة الرئيسية</a>
+</div>
+<style>
+.back-button {
+ display: inline-block;
+ padding: 15px 30px;
+ background: linear-gradient(45deg, #0077cc, #00aaff);
+ color: #fff;
+ text-decoration: none;
+ font-size: 20px;
+ font-weight: bold;
+ border-radius: 10px;
+ box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+ transition: all 0.3s ease;
+}
+.back-button:hover {
+ transform: translateY(-3px) scale(1.05);
+ box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+ background: linear-gradient(45deg, #00aaff, #0077cc);
+}
+</style>
 </p>
 </body>
 </html>
