--- a/words.html
+++ b/words.html
@@ -446,7 +446,7 @@
 </table>
 <!-- زر العودة إلى القائمة الرئيسية -->
 <a href="index.html" class="home-btn" title="القائمة الرئيسية">
- 🏠 الرئيسية
+⏩️رجوع 
 </a>
 <!-- CSS للزر الاحترافي -->
 <style>
