--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 </header>
 <main>
 <div class="section">
-<div class="section-icon">📖</div>
-<a href="words.html">كلمات</a>
+<div class="section-icon">📚</div>
+<a href="words.html">مفردات</a>
 </div>
 <div class="section">
 <div class="section-icon">✍️</div>
@@ -98,12 +98,13 @@
 <a href="a1_emails.html">إيميلات</a>
 </div>
 <div class="section">
-<div class="section-icon">📚</div>
-<a href="vocabulary.html">مفردات</a>
+<div class="section-icon">📖</div>
+<a href="vocabulary.html">ات</a>
 </div>
 </main>
 </body>
 </html>
+
 
 
 
