--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>موقعي التعليمي</title>
+<title>📖 موقع تعليمي</title>
 <style>
  body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -104,6 +104,7 @@
 </main>
 </body>
 </html>
+
 
 
 
