--- a/words.html
+++ b/words.html
@@ -59,6 +59,35 @@
 </tr>
 </thead>
 <tbody>
+<tr><td><div class="word">der Arzt <button class="sound-btn" onclick="speak('der Arzt')">🔊</button></div></td><td>طبيب</td></tr>
+<tr><td><div class="word">die Ärztin <button class="sound-btn" onclick="speak('die Ärztin')">🔊</button></div></td><td>طبيبة</td></tr>
+<tr><td><div class="word">der Friseur <button class="sound-btn" onclick="speak('der Friseur')">🔊</button></div></td><td>حلاق</td></tr>
+<tr><td><div class="word">die Friseurin <button class="sound-btn" onclick="speak('die Friseurin')">🔊</button></div></td><td>حلاقة</td></tr>
+<tr><td><div class="word">das Fahrrad <button class="sound-btn" onclick="speak('das Fahrrad')">🔊</button></div></td><td>دراجة</td></tr>
+<tr><td><div class="word">das Auto <button class="sound-btn" onclick="speak('das Auto')">🔊</button></div></td><td>سيارة</td></tr>
+<tr><td><div class="word">der Zug <button class="sound-btn" onclick="speak('der Zug')">🔊</button></div></td><td>قطار</td></tr>
+<tr><td><div class="word">das Flugzeug <button class="sound-btn" onclick="speak('das Flugzeug')">🔊</button></div></td><td>طائرة</td></tr>
+<tr><td><div class="word">die Bibliothek <button class="sound-btn" onclick="speak('die Bibliothek')">🔊</button></div></td><td>مكتبة</td></tr>
+<tr><td><div class="word">der Supermarkt <button class="sound-btn" onclick="speak('der Supermarkt')">🔊</button></div></td><td>سوبرماركت</td></tr>
+<tr><td><div class="word">die Bäckerei <button class="sound-btn" onclick="speak('die Bäckerei')">🔊</button></div></td><td>مخبز</td></tr>
+<tr><td><div class="word">die Metzgerei <button class="sound-btn" onclick="speak('die Metzgerei')">🔊</button></div></td><td>ملحمة</td></tr>
+<tr><td><div class="word">die Apotheke <button class="sound-btn" onclick="speak('die Apotheke')">🔊</button></div></td><td>صيدلية</td></tr>
+<tr><td><div class="word">das Krankenhaus <button class="sound-btn" onclick="speak('das Krankenhaus')">🔊</button></div></td><td>مستشفى</td></tr>
+<tr><td><div class="word">der Park <button class="sound-btn" onclick="speak('der Park')">🔊</button></div></td><td>حديقة عامة</td></tr>
+<tr><td><div class="word">der Spielplatz <button class="sound-btn" onclick="speak('der Spielplatz')">🔊</button></div></td><td>ملعب أطفال</td></tr>
+<tr><td><div class="word">die Brücke <button class="sound-btn" onclick="speak('die Brücke')">🔊</button></div></td><td>جسر</td></tr>
+<tr><td><div class="word">der Fluss <button class="sound-btn" onclick="speak('der Fluss')">🔊</button></div></td><td>نهر</td></tr>
+<tr><td><div class="word">der See <button class="sound-btn" onclick="speak('der See')">🔊</button></div></td><td>بحيرة</td></tr>
+<tr><td><div class="word">der Berg <button class="sound-btn" onclick="speak('der Berg')">🔊</button></div></td><td>جبل</td></tr>
+<tr><td><div class="word">der Wald <button class="sound-btn" onclick="speak('der Wald')">🔊</button></div></td><td>غابة</td></tr>
+<tr><td><div class="word">der Strand <button class="sound-btn" onclick="speak('der Strand')">🔊</button></div></td><td>شاطئ</td></tr>
+<tr><td><div class="word">die Insel <button class="sound-btn" onclick="speak('die Insel')">🔊</button></div></td><td>جزيرة</td></tr>
+<tr><td><div class="word">das Hotel <button class="sound-btn" onclick="speak('das Hotel')">🔊</button></div></td><td>فندق</td></tr>
+<tr><td><div class="word">das Restaurant <button class="sound-btn" onclick="speak('das Restaurant')">🔊</button></div></td><td>مطعم</td></tr>
+<tr><td><div class="word">die Speisekarte <button class="sound-btn" onclick="speak('die Speisekarte')">🔊</button></div></td><td>قائمة طعام</td></tr>
+<tr><td><div class="word">der Kellner <button class="sound-btn" onclick="speak('der Kellner')">🔊</button></div></td><td>نادل</td></tr>
+<tr><td><div class="word">die Kellnerin <button class="sound-btn" onclick="speak('die Kellnerin')">🔊</button></div></td><td>نادلة</td></tr>
+
 <tr><td><div class="word">der Tiger <button class="sound-btn" onclick="speak('der Tiger')">🔊</button></div></td><td>نمر</td></tr>  
 <tr><td><div class="word">der Bär <button class="sound-btn" onclick="speak('der Bär')">🔊</button></div></td><td>دب</td></tr>  
 <tr><td><div class="word">der Elefant <button class="sound-btn" onclick="speak('der Elefant')">🔊</button></div></td><td>فيل</td></tr>  
