--- a/words-examples.htm
+++ b/words-examples.htm
@@ -6,59 +6,75 @@
 <title>Wörterbuch Deutsch-Arabisch – قاموس ألماني-عربي</title>
 <style>
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.8;
-    padding: 20px;
-    background: #f9f9f9;
-    color: #333;
+   font-family: Arial, sans-serif;
+   line-height: 1.8;
+   padding: 20px;
+   background: #f9f9f9;
+   color: #333;
 }
 h1 {
-    text-align: center;
-    color: #0044cc;
+   text-align: center;
+   color: #0044cc;
 }
 .example {
-    background: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    margin: 20px auto;
-    max-width: 800px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+   background: #fff;
+   border: 1px solid #ddd;
+   border-radius: 8px;
+   padding: 15px;
+   margin: 20px auto;
+   max-width: 800px;
+   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 .german {
-    background: #eef5ff;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    white-space: pre-wrap;
+   background: #eef5ff;
+   padding: 10px;
+   border-radius: 5px;
+   margin-bottom: 10px;
+   white-space: pre-wrap;
+}
+.german-line {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   margin-bottom: 6px;
 }
 .arabic {
-    background: #fff8e1;
-    padding: 10px;
-    border-radius: 5px;
-    direction: rtl;
-    text-align: right;
-    white-space: pre-wrap;
+   background: #fff8e1;
+   padding: 10px;
+   border-radius: 5px;
+   direction: rtl;
+   text-align: right;
+   white-space: pre-wrap;
 }
 .title {
-    font-weight: bold;
-    color: #555;
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+   font-weight: bold;
+   color: #555;
+   margin-bottom: 10px;
+   display: flex;
+   align-items: center;
+   gap: 10px;
 }
 .sound-btn {
-    cursor: pointer;
-    font-size: 18px;
-    background: none;
-    border: none;
+   cursor: pointer;
+   font-size: 18px;
+   background: none;
+   border: none;
 }
 </style>
 </head>
 <body>
 <h1>📚 Wörterbuch Deutsch-Arabisch مع أمثلة</h1>
-
+<!-- Beispiel -->
+<div class="example">
+<div class="title">🏠 Haus – بيت <button class="sound-btn" onclick="speak('Haus')">🔊</button></div>
+<div class="german">
+<div class="german-line">Ich wohne in einem großen Haus. <button class="sound-btn" onclick="speak('Ich wohne in einem großen Haus.')">🔊</button></div>
+<div class="german-line">Mein Haus hat drei Schlafzimmer und einen Garten. <button class="sound-btn" onclick="speak('Mein Haus hat drei Schlafzimmer und einen Garten.')">🔊</button></div>
+</div>
+<div class="arabic">أعيش في بيت كبير.  
+ بيتي يحتوي على ثلاث غرف نوم وحديقة.</div>
+</div>
+    
 <!-- Kategorie: Haus & Möbel -->
 <div class="example">
 <div class="title">🏠 Haus – بيت <button class="sound-btn" onclick="speak('Haus')">🔊</button></div>
@@ -1660,5 +1676,6 @@ Meine Schule hat viele freundliche Lehrer.
 </body>
 
 </html>
+
 
 
