--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <meta charset="UTF-8">
 <title>تعلم الألمانية بسهولة | موقع تعليمي</title>
 
-<!-- خط عربي جميل -->
+<!-- خط عربي -->
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 
-<!-- أيقونة للموقع -->
+<!-- أيقونات Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<!-- أيقونة الموقع -->
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 <style>
@@ -91,33 +94,44 @@
 </head>
 <body>
 <header>
-  <h1>👋 أهلاً بك في موقع تعلم الألمانية</h1>
+  <h1><i class="fas fa-graduation-cap"></i> أهلاً بك في موقع تعلم الألمانية</h1>
   <p>اختر القسم الذي تريده وابدأ رحلتك التعليمية بسهولة ووضوح</p>
 </header>
 
 <main>
   <div class="section">
-    <div class="section-icon">📚</div>
+    <div class="section-icon"><i class="fas fa-book"></i></div>
     <a href="words.html">مفردات أساسية</a>
   </div>
 
   <div class="section">
-    <div class="section-icon">✍️</div>
+    <div class="section-icon"><i class="fas fa-pencil-alt"></i></div>
     <a href="words-examples.html">كلمات مع أمثلة</a>
   </div>
 
   <div class="section">
-    <div class="section-icon">📧</div>
+    <div class="section-icon"><i class="fas fa-envelope-open-text"></i></div>
     <a href="a1_emails.html">إيميلات تدريبية</a>
   </div>
 
   <div class="section">
-    <div class="section-icon">📖</div>
+    <div class="section-icon"><i class="fas fa-language"></i></div>
     <a href="vocabulary.html">مفردات متقدمة</a>
+  </div>
+
+  <div class="section">
+    <div class="section-icon"><i class="fas fa-video"></i></div>
+    <a href="videos.html">دروس فيديو</a>
+  </div>
+
+  <div class="section">
+    <div class="section-icon"><i class="fas fa-question-circle"></i></div>
+    <a href="quizzes.html">اختبارات قصيرة</a>
   </div>
 </main>
 </body>
 </html>
+
 
 
 
