--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 </header>
 
 <main>
+  <!-- الأقسام الأصلية -->
   <div class="section">
     <div class="section-icon"><i class="fas fa-book"></i></div>
     <a href="words.html">مفردات أساسية</a>
@@ -119,6 +120,7 @@
     <a href="vocabulary.html">مفردات متقدمة</a>
   </div>
 
+  <!-- الأقسام المضافة -->
   <div class="section">
     <div class="section-icon"><i class="fas fa-video"></i></div>
     <a href="videos.html">دروس فيديو</a>
@@ -131,6 +133,8 @@
 </main>
 </body>
 </html>
+
+
 
 
 
