--- a/index.html
+++ b/index.html
@@ -102,33 +102,34 @@
   <!-- الأقسام الأصلية -->
   <div class="section">
     <div class="section-icon"><i class="fas fa-book"></i></div>
-    <a href="words.html">مفردات أساسية</a>
+    <a href="words.html" aria-label="مفردات أساسية">مفردات أساسية</a>
   </div>
 
   <div class="section">
     <div class="section-icon"><i class="fas fa-pencil-alt"></i></div>
-    <a href="words-examples.html">كلمات مع أمثلة</a>
+    <!-- تم إصلاح الرابط: htm بدل html -->
+    <a href="words-examples.htm" aria-label="جمل مع أمثلة">جمل مع أمثلة</a>
   </div>
 
   <div class="section">
     <div class="section-icon"><i class="fas fa-envelope-open-text"></i></div>
-    <a href="a1_emails.html">إيميلات تدريبية</a>
+    <a href="a1_emails.html" aria-label="إيميلات تدريبية">إيميلات تدريبية</a>
   </div>
 
   <div class="section">
     <div class="section-icon"><i class="fas fa-language"></i></div>
-    <a href="vocabulary.html">مفردات متقدمة</a>
+    <a href="vocabulary.html" aria-label="مفردات متقدمة">مفردات متقدمة</a>
   </div>
 
-  <!-- الأقسام المضافة -->
+  <!-- أقسام إضافية اختيارية -->
   <div class="section">
     <div class="section-icon"><i class="fas fa-video"></i></div>
-    <a href="videos.html">دروس فيديو</a>
+    <a href="videos.html" aria-label="دروس فيديو">دروس فيديو</a>
   </div>
 
   <div class="section">
     <div class="section-icon"><i class="fas fa-question-circle"></i></div>
-    <a href="quizzes.html">اختبارات قصيرة</a>
+    <a href="quizzes.html" aria-label="اختبارات قصيرة">اختبارات قصيرة</a>
   </div>
 </main>
 </body>
