--- a/videos.html
+++ b/videos.html
@@ -62,10 +62,11 @@
   .video-card:hover {
     transform: translateY(-6px);
   }
-  iframe {
+  video {
     width: 100%;
-    height: 200px;
+    height: auto;
     border-radius: 10px;
+    outline: none;
   }
   h2 {
     margin-top: 10px;
@@ -76,29 +77,33 @@
 </head>
 <body>
 <header>
-  <h1><i class="fas fa-video"></i> دروس فيديو لتعلم الألمانية</h1>
+  <h1><i class="fas fa-video"></i> دروس فيديو كرتونية</h1>
   <a href="index.html"><i class="fas fa-home"></i> العودة للصفحة الرئيسية</a>
 </header>
 
 <main>
   <div class="video-card">
-    <iframe src="https://www.youtube.com/embed/1NdiFG6lZ_Q" allowfullscreen></iframe>
-    <h2>مقدمة في اللغة الألمانية</h2>
+    <video controls>
+      <source src="conversation.mp4" type="video/mp4">
+      متصفحك لا يدعم تشغيل الفيديو.
+    </video>
+    <h2>محادثة قصيرة (5 دقائق)</h2>
   </div>
 
   <div class="video-card">
-    <iframe src="https://www.youtube.com/embed/5hO9i7RbVJQ" allowfullscreen></iframe>
-    <h2>مفردات يومية أساسية</h2>
+    <video controls>
+      <source src="grammar.mp4" type="video/mp4">
+      متصفحك لا يدعم تشغيل الفيديو.
+    </video>
+    <h2>شرح قواعد أساسية (5 دقائق)</h2>
   </div>
 
   <div class="video-card">
-    <iframe src="https://www.youtube.com/embed/At49RXl9w74" allowfullscreen></iframe>
-    <h2>جمل شائعة في المحادثة</h2>
-  </div>
-
-  <div class="video-card">
-    <iframe src="https://www.youtube.com/embed/q1Yy9tIsUuk" allowfullscreen></iframe>
-    <h2>تعلم القواعد الأساسية</h2>
+    <video controls>
+      <source src="vocabulary.mp4" type="video/mp4">
+      متصفحك لا يدعم تشغيل الفيديو.
+    </video>
+    <h2>مفردات يومية (5 دقائق)</h2>
   </div>
 </main>
 </body>
